@@ -1,3 +1,15 @@
+2018-03-28 Philipp Klaus Krause <pkk AT spth.de>
+
+	* src/SDCC.y,
+	  src/SDCCasm.c,
+	  src/SDCCicode.c,
+	  src/SDCCralloc.hpp,
+	  src/stm8/gen.c,
+	  src/stm8/ralloc.c,
+	  src/stm8/ralloc2.cc,
+	  src/stm8/peep.c:
+	  Improve handling of global pointers.
+
 2018-03-27 Philipp Klaus Krause <krauseph AT informatik.uni-freiburg.de>
 
 	* src/SDCCast.c,
